# project-vega

./: .dockerignore  .gitignore  Dockerfile  Makefile  PROJECT_VEGA_SKILL.md  PROJECT_VEGA_SKILL_updated.md  README.md  agent_platform_runbook.md  agentcore_help.txt  codebase_detailed_guide.md  docker-compose.yml  hld_text.txt  main.py  pyproject.toml  query.py  requirements.txt
.github/workflows/: ci.yml
adapters/: __init__.py
adapters/aws/: __init__.py  bedrock_kb_manager.py  boto3_factory.py  dynamodb_session.py
agents/: __init__.py  prompts.py  readonly_agent.py  retrieval_agent.py  templates.py  underwriting_agent.py
agents/tools/: retriever.py
app/: main.py
control_plane/: __init__.py  agent_registry.py  deployment_manager.py  execution_profile_repository.py  kb_manager.py  memory_manager.py  prompt_repository.py
domain/: __init__.py  audit.py  execution_profile.py  identity.py  invocation.py  retrieval.py
entrypoints/: agent_gateway.py  claims_agent.py  platform_agent.py  underwriting_agent.py
frontend/: index.html
profiles/: coaction-underwriting.json  vega_binding_authority_bot.json
runtime/: __init__.py  base_agent.py  host_adapter.py  orchestrator.py  response_composer.py  strands_agent.py
scripts/: kb_pipeline.py  platform_bootstrap.py  pre_push_check.py  query.py  split_manual.py
services/: __init__.py  agent_service.py  audit.py  authorization.py  dynamodb_session_manager.py  guardrails.py  memory.py  model_gateway.py  retrieval.py  s3_session_manager.py  session_manager.py  telemetry.py  tool_gateway.py
ui/: gradio_app.py
(+29 files in other folders)
